# bypass-methods

./: .cursorignore  .gitignore  @plan.md  CMakeLists.txt  README.md  README_accessibility.md  README_advanced_capture.md  README_modern_approach.md  RUNNING_LOCALLY.md  TODO.md  accessibility_controller.py  accessibility_manager.py  advanced_capture.py  automated_test.py  dashboard_example.py  demo_gui_macos.py  demo_macos.py  future_extensions.md  integration_example.py  named_pipe_manager.py  phase1_progress.md  remote_client.py  requirements_accessibility.txt  setup.py  to-do.md  to-do.md.bak  windows_graphics_capture.py
.cursor/rules/: 01-project-overview.mdc  02-project-structure.mdc  03-build-system.mdc  04-core-components.mdc  05-testing.mdc  06-getting-started.mdc
.github/workflows/: build.yml
DLLHooks/: DLLHooks.vcxproj  DLLHooks.vcxproj.filters  dllmain.cpp
cmake/: dependencies.cmake
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_SYSTEM_GUIDE.md  COM_REFERENCE_COUNTING_FIX.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  README_capture.md  README_dxgi.md  README_wgc.md  TROUBLESHOOTING.md  USER_GUIDE.md  UTILITY_MIGRATION_PLAN.md  WINDOWS_INSTALLATION.md  directx_interface_detection.md  driver_signature_patching.md  implementation_summary.md  memory_com_tracking.md  phase1_progress.md  shared_memory_transport.md
docs/diagrams/: README.md
docs/examples/: README.md
docs/planning/: new-todo.md  to-do.md
include/: dx_hook_core.h  frame_extractor.h  shared_memory_transport.h
include/com_hooks/: com_ptr.h  com_tracker.h  factory_hooks.h
include/hooks/: com_interface_wrapper.h  dx_common.h  dx_hook_core.h  hook_base.h  hook_utils.h  hooked_functions.h  keyboard_hook.h  new_hook_system.h  new_shared_memory_transport.h  swap_chain_hook.h  trampoline_utils.h  windows_api_hooks.h
include/memory/: memory_tracker.h  pattern_scanner.h
include/optimization/: memory_pool.h  performance_optimizer.h  thread_pool.h
include/signatures/: dx_signatures.h  lockdown_signatures.h
include/utils/: crash_reporter.h  error_handler.h  memory_tracker.h  performance_monitor.h  raii_wrappers.h  smart_pointers.h
include/virtual_camera/: directshow_filter.h  facial_tracking.h  kernel_driver.h  kernel_driver_ioctl.h  virtual_camera.h
python/: setup.py
python/accessibility/: accessibility_controller.py
python/capture/: advanced_capture.py  dxgi_desktop_duplication.py  enhanced_capture.py
python/examples/: integration_example.py
python/requirements/: requirements_security.txt
python/tests/: automated_test.py
python/tools/: configuration_manager.py  dashboard.py  gui_controller.py  named_pipe_manager.py  security_integration.py  security_manager.py  security_tester.py
scripts/: build_windows.bat  build_windows.ps1  install_windows.bat  validate_build.py
src/: dllmain.cpp  dllmain_refactored.cpp  test_client.cpp  test_injector.py
src/com_hooks/: com_tracker.cpp  factory_hooks.cpp
src/frame/: frame_extractor.cpp
src/hooks/: dx_hook_core.cpp  new_dx_hook_core.cpp  new_swap_chain_hook.cpp  swap_chain_hook.cpp
src/hooks/windows_api/: hook_utils.cpp  hooked_functions.cpp  keyboard_hook.cpp  new_hook_system.cpp  trampoline_utils.cpp  windows_api_hooks.cpp
src/memory/: memory_scanner.cpp  memory_tracker.cpp  pattern_scanner.cpp
src/optimization/: memory_pool.cpp  performance_optimizer.cpp  thread_pool.cpp
src/shared/: new_shared_memory_transport.cpp  shared_memory_transport.cpp
src/signatures/: dx_signatures.cpp  lockdown_signatures.cpp  new_lockdown_signatures.cpp
src/tests/: test_virtual_camera.cpp
src/utils/: crash_reporter.cpp  error_handler.cpp  memory_tracker.cpp  performance_monitor.cpp  raii_wrappers.cpp
src/virtual_camera/: directshow_filter.cpp  facial_tracking.cpp  kernel_driver.cpp  kernel_driver_source.c  kernel_driver_structs.h  virtual_camera.cpp
tests/: CMakeLists.txt  test_com_interface_wrapper.cpp  test_com_tracker.cpp  test_driver_patching.cpp  test_dx_hook_core.cpp  test_dx_signatures.cpp  test_error_handler.cpp  test_frame_extractor.cpp  test_hooked_functions.cpp  test_keyboard_hook.cpp  test_lockdown_signatures.cpp  test_memory_tracker.cpp  test_new_dx_hook_core.cpp  test_pattern_scanner.cpp  test_raii_wrappers.cpp  test_shared_memory_transport.cpp  test_swap_chain_hook.cpp  test_virtual_camera.cpp  test_windows_api_hooks.cpp  test_windows_integration.cpp
tests/performance/: test_optimizations.cpp
